--- a/tiempocheck_extension/popup.html
+++ b/tiempocheck_extension/popup.html
@@ -7,17 +7,31 @@
   <link rel="stylesheet" href="popup.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>DeepLy</h1>
-    <p id="status">Cargando datos...</p>
+
+  <div class="popup-container">
+    <h1>Tiempo Check</h1>
     <div class="stats">
       <p><strong>Sitio actual:</strong> <span id="current-site">---</span></p>
       <p><strong>Tiempo total:</strong> <span id="time-spent">0 min</span></p>
     </div>
   </div>
-    <div class="all-stats">
+  <div id="rachas-container">
+  <div class="racha" id="racha-metas">
+    <img src="apagada.PNG" class="racha-icon" id="icono-racha-metas" alt="Racha metas">
+    <span class="racha-texto">Dias de racha metas: <span id="contador-racha-metas">0</span> días</span>
+  </div>
+  <div class="racha" id="racha-limites">
+    <img src="apagada.PNG" class="racha-icon" id="icono-racha-limites" alt="Racha límites">
+    <span class="racha-texto">Dias de racha limites: <span id="contador-racha-limites">0</span> días</span>
+  </div>
+</div>
+
+    <div class="historial-container">
+      <div class="historial-texto">Historial de sitios</div>
+      <div class="historial-popup" id="popup-historial">
         <h2>Historial de sitios</h2>
-    <ul id="site-list"></ul>
+          <ul id="site-list"></ul>
+      </div>
     </div>
 
 
