Descripción del cambio

--- a/tiempocheck_extension/popup.html
+++ b/tiempocheck_extension/popup.html
@@ -27,6 +27,17 @@
       </div>
     </div>
 
+    <div class="focus-status-widget" id="focus-status-widget" style="display: none;">
+      <div style="background: linear-gradient(135deg, #667eea, #764ba2); padding: 15px; border-radius: 10px; color: white; text-align: center;">
+        <h3>🎯 Modo Focus Activo</h3>
+        <p style="margin: 10px 0; font-size: 0.9em;">
+          Bloqueando: <span id="focus-categories-count">0</span> categorías
+        </p>
+        <p style="font-size: 1.5em; font-weight: bold;" id="focus-time-remaining">--:--</p>
+      </div>
+    </div>
+
+
     <div class="streak-calendar" id="streak-calendar-visual">
     </div>
 
